Mock note actions

--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,13 @@
 body {
     padding: 0;
     margin: 0;
+    background: #eaeaea;
 }
 
 .hidden {
     display: none !important;
+}
+
+.invisible {
+    visibility: hidden !important;
 }
