--- a/src/style.css
+++ b/src/style.css
@@ -11,3 +11,7 @@ body {
 .invisible {
     visibility: hidden !important;
 }
+
+.hovered {
+    box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 20px, rgba(0, 0, 0, 0.117647) 0px 1px 20px !important;
+}
