--- a/src/style.css
+++ b/src/style.css
@@ -22,3 +22,13 @@ body {
 .hovered {
     box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 20px, rgba(0, 0, 0, 0.117647) 0px 1px 20px !important;
 }
+
+.global-spinner {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(255,255,255,0.7);
+  z-index: 999999999;
+}
