--- a/src/style.css
+++ b/src/style.css
@@ -61,9 +61,9 @@ body {
     font-weight: bold;
     font-size: 18px;
     border: none;
-    width: 100%;
     resize: none;
     line-height: 36px;
+    margin-right: 16px;
 }
 .edit-title-input:focus {
     outline: none;
@@ -72,9 +72,9 @@ body {
 .edit-text-input {
     font-size: 14px;
     border: none;
-    width: 100%;
     resize: none;
     padding-top: 16px;
+    margin-right: 16px;
 }
 .edit-text-input:focus {
     outline: none;
