Update note collaborators list after sharing a note

--- a/src/style.css
+++ b/src/style.css
@@ -79,3 +79,13 @@ body {
 .edit-text-input:focus {
     outline: none;
 }
+
+.share-dialog {
+
+}
+.share-dialog .collabolators-search-box {
+
+}
+.share-dialog .collabolators-search-box .users-list {
+
+}
